# satellite_view_py_html

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_webapp.py
satellite_view/: __init__.py  __main__.py  cli.py  webapp.py
satellite_view/static/: app.js  styles.css
satellite_view/templates/: index.html
satellite_view/tests/: test_webapp.py
static/: app.js  styles.css
templates/: index.html
