[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-view"
version = "0.1.0"
description = "Satellite timelapse viewer with a Flask backend and HTML/JS frontend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.1.1",
  "Pillow==11.2.1",
  "requests==2.32.3",
]

[project.scripts]
satellite_view = "satellite_view.cli:main"

[tool.setuptools.packages.find]
include = ["satellite_view*"]

[tool.setuptools.package-data]
satellite_view = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["satellite_view/tests"]
